--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "symfony/mailer": "^6.3"
+        "symfony/mailer": "^6.3",
+        "guzzlehttp/guzzle": "^7.7"
     }
 }
